--- a/README
+++ b/README
@@ -408,5 +408,5 @@ IF SOMETHING GOES WRONG:
    with the EIP value.)
 
    gdb'ing a non-running kernel currently fails because gdb (wrongly)
-   disregards the starting offset for which the kernel is compiled.
+   disregards the starting offset for which the kernel is compiled
 
